# Trade-Simulator

./: CMakeLists.txt  Documentation.md  LICENSE  README.md  index.html
src/: App.tsx  InputPanel.cpp  InputPanel.h  MainWindow.cpp  MainWindow.h  OrderBook.h  OutputPanel.cpp  OutputPanel.h  TradeCalculator.cpp  TradeCalculator.h  WebSocketClient.cpp  WebSocketClient.h
src/components/: InputPanel.tsx  OrderbookVisualizer.tsx  OutputPanel.tsx  TradeSimulator.tsx
src/hooks/: useOrderbook.ts
src/services/: TradeCalculator.ts  WebSocketManager.ts
src/types/: index.ts
src/utils/: formatters.ts
